# kinect_fusion

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  format.sh
include/: BilateralFilter.cuh  DepthFrame.h  DepthSensor.h  Eigen.h  FreeImageHelper.h  FusionAlgorithm.h  ICPOptimizer.h  MarchingCubes.h  MeshUtils.h  MeshWriter.h  NearestNeighbor.h  PointCloud.h  ProcrustesAligner.h  RayMarching.h  SimpleMesh.h  SurfaceMeasurement.h  TSDFVolume.h  Triangle.h  Vertex.h  VirtualSensor.h  Volume.h
src/: DepthFrame.h  DepthSensor.h  FreeImageHelper.cpp  MeshUtils.cpp  MeshWriter.cpp  ProcrustesAligner.cpp  RayMarching.cpp  SimpleMesh.cpp  SurfaceMeasurement.cpp  TSDFVolume.cpp  VirtualSensor.cpp  Volume.cpp  main.cpp
src/cuda/: BilateralFilter.cu  TSDFVolume.cu  helpers.cu
